--- a/wiki/PlanningAuthoritiesG.wiki
+++ b/wiki/PlanningAuthoritiesG.wiki
@@ -1,7 +1,6 @@
 || Ready || Gateshead Council || Gateshead || PublicAccess || http://planning.gateshead.gov.uk/publicaccess/ ||
 || Done || Gedling Borough Council || Nottingham || PublicAccess || http://publicaccess.gedling.gov.uk/publicaccess/tdc/tdc_home.aspx ||
-||  || Glasgow City Council || Glasgow || weekly lists as pdf || 
-http://www.glasgow.gov.uk/en/Business/Planning_Development/DevelopmentControl/Sitehistorysearches/ ||
+||  || Glasgow City Council || Glasgow || weekly lists as pdf || http://www.glasgow.gov.uk/en/Business/Planning_Development/DevelopmentControl/Sitehistorysearches/ ||
 || Done || Gloucester City Council || Gloucester || PublicAccess || http://www.glcstrplnng11.co.uk/publicaccess/ ||
 || Ready || Gloucestershire County Council || Gloucester || PublicAccess || http://planning.gloucestershire.gov.uk/publicaccess/ ||
 ||  || Gosport Borough Council || Gosport || search by date || http://www.gosport.gov.uk/gbcplanning/ApplicationSearch2.aspx ||
@@ -10,4 +9,5 @@ http://www.glasgow.gov.uk/en/Business/Planning_Development/DevelopmentControl/Si
 ||  || Greenwich Borough Council || London || weekly lists in html || http://www.greenwich.gov.uk/Greenwich/YourEnvironment/PlanningAndBuilding/PlanningBuildingConservation/ApplicationsDecisionsAppeals/PlanningApplications/April/ ||
 || In Progress || Guildford Borough Council || Guildford || it's AcolNet, but not as we know it. || http://www.guildford.gov.uk/acolnet/ ||
 ||  || Gwynedd Council || Caernarfon, Dolgellau, Pwllheli || searchable by date || http://www.gwynedd.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
+ 
  
