--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -18,6 +18,7 @@
   * Chelmsford
   * Chiltern
   * Craven
+  * Doncaster
   * Dundee
   * Eastleigh
   * Eden
@@ -60,11 +61,11 @@ Other things to do:
   * Bury (script returns nothing)
   * Dacorum (always returns no applications)
   * Derby (no postcodes)
-  * Doncaster (Duncan) - works in browser - empty results for script
   * Durham (Duncan) - works in browser - empty results for script
   * Hambleton (Duncan) - works for browser - empty results for script
   * South Bedfordshire - timing out
   * Wolverhampton (empty database)
+ 
  
  
  
