--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -8,7 +8,7 @@
   * Surrey Heath (Duncan) - AcolNet - The problem here looks like it might be cookie and javascript related.
   * Wychavon (Duncan) - an AcolNet site, but slightly odd.
 
-= Deployed by Duncan 07/10/2007
+= Deployed by Duncan 07/10/2007 =
 
   * Bassetlaw
   * Bracknell Forest
