--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -8,19 +8,19 @@
   * Surrey Heath (Duncan) - AcolNet - The problem here looks like it might be cookie and javascript related.
   * Wychavon (Duncan) - an AcolNet site, but slightly odd.
 
-= Deployed by Duncan 07/10/2007 =
+= Deployed by Duncan 07-08/10/2007 =
 
   * Bassetlaw
   * Bracknell Forest
   * Broads Authority
   * Bromley (changed this to my python scraper, which seems to be working)
-
-= Working and ready to deploy =
-
   * Caradon
   * Chelmsford
   * Chiltern
   * Craven
+
+= Working and ready to deploy =
+
   * Doncaster
   * Dundee
   * Eastleigh
