Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesD.wiki
+++ b/wiki/PlanningAuthoritiesD.wiki
@@ -9,12 +9,12 @@
 || || Derbyshire Dales || Derbyshire Dales District Council || weekly lists in html. appalling looking search page || http://www.doctec.co.uk/derbyshiredales/aspxpages/WeeklyLists.aspx ||
 || || Derwentside || Derwentside District Council || searchable by date received || http://www.derwentside.gov.uk/index.cfm?articleid=8427 ||
 || || Devon || Devon County Council || monthly lists of councils own applications || http://www.devon.gov.uk/index/environment/planning/planning-system/planning_applications-mw/planning_applications.htm ||
-|| Ready || Doncaster || Doncaster Metropolitan Borough Council || PublicAccess || http://local.doncaster.gov.uk/PublicAccess/tdc/ ||
+|| Done || Doncaster || Doncaster Metropolitan Borough Council || PublicAccess || http://local.doncaster.gov.uk/PublicAccess/tdc/ ||
 || || Dorset || Dorset County Council || handles very few apps. Searchable by some dates. http://www.dorsetforyou.com/ePlanning/searchPageLoad.do ||
 || || Dover || Dover District Council || searchable by date received || http://www.dover.gov.uk/planning/Search_net/search.aspx ||
 || || Dudley || Dudley Metropolitan Borough Council || searchable by some dates, and weekly lists || http://www2.dudley.gov.uk/swiftlg/apas/run/Wphappcriteria.display ||
 || || Dumfries and Galloway || Dumfries and Galloway Council || weekly pdy lists separated into five areas || http://www.dumgal.gov.uk/dumgal/MiniWeb.aspx?id=91&menuid=1408&openid=1102 ||
-|| Ready || Dundee || Dundee City Council || PublicAccess || ||
+|| Done || Dundee || Dundee City Council || PublicAccess || ||
 || In Progress || Durham || Durham City Council || PublicAccess - database appears to be empty || ||
 || || Durham County || Durham County Council || Online register searchable by month and year || http://gis.durham.gov.uk/website/dcs/SearchMain.asp ||
  
