--- a/wiki/PlanningAuthoritiesE.wiki
+++ b/wiki/PlanningAuthoritiesE.wiki
@@ -6,7 +6,7 @@
 || ready || East Dorset District Council || Wimborne Minster || PublicAccess || http://193.243.228.16/PublicAccess/tdc/tdc_home.aspx ||
 ||  || East Dunbartonshire Council || Glasgow || searchable by date || http://www.eastdunbarton.gov.uk/web%20site/live/edweblive.nsf/InternetMF?ReadForm&M=DEFAULTC=http://www.eastdunbarton.gov.uk/web%20site/live/edweblive.nsf/QuickLinkPagesWeb/Planning%20Apps?OpenDocument ||  || East Hampshire District Council || Petersfield || last week's apps || http://213.131.177.248/ehdc/planningapplicationsonline.nsf/LastWeek?OpenView&count=1000 ||
 || Done || East Hertfordshire District Council || Hertford || searchable by date || http://e-services.eastherts.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
-|| Ready || East Lindsey District Council || Louth || AcolNet || http://www.e-lindsey.gov.uk/planning/AcolnetCGI.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
+|| Done || East Lindsey District Council || Louth || AcolNet || http://www.e-lindsey.gov.uk/planning/AcolnetCGI.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 ||  || East Lothian Council || Haddington || WAM - weekly lists|| http://www.planning.eastlothian.gov.uk/WAM/search/pas/index.htm ||
 ||  || East Northamptonshire Council || Thrapston || searchable by date || http://www.east-northantsonline.co.uk/planning/searchparam.asp ||
 ||  || East Renfrewshire Council || Glasgow || weekly lists as pdf || http://www.eastrenfrewshire.gov.uk/environment/planning/planning_applications/weekly_lists.htm ||
@@ -14,8 +14,8 @@
 ||  || East Staffordshire Borough Council || Burton upon Trent || PlanningExplorer || http://www2.eaststaffsbc.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 ||  || East Sussex County Council || Lewes || complete list of current applications as pdf or word || http://www.eastsussex.gov.uk/environment/planning/applications/applicationslong/download.htm ||
 ||  || Eastbourne Borough Council || Eastbourne || searchable by date || http://www.eastbourne.gov.uk/planningapplications/search.asp ||
-|| Ready || Eastleigh Borough Council || Eastleigh || FastWeb || http://www.eastleigh.gov.uk/FastWEB/search.asp ||
-|| Ready || Eden District Council || Penrith || FastWeb || http://eforms.eden.gov.uk/fastweb/search.asp||
+|| Done || Eastleigh Borough Council || Eastleigh || FastWeb || http://www.eastleigh.gov.uk/FastWEB/search.asp ||
+|| Done || Eden District Council || Penrith || FastWeb || http://eforms.eden.gov.uk/fastweb/search.asp||
 || Done || Edinburgh City Council || Edinburgh || PublicAccess || http://citydev-portal.edinburgh.gov.uk/publicaccess/dc/DcApplication/application_searchform.aspx||
 ||  || Ellesmere Port & Neston Borough Council || Ellesmere Port || weekly lists|| http://ocella.epnbc.gov.uk/portal/page?_pageid=33,38205&_dad=portal&_schema=PORTAL||
 ||  || Elmbridge Borough Council || Esher || PlanetApplicationEnquiry || http://www2.elmbridge.gov.uk/Planet/ispforms.asp?serviceKey=SysDoc-PlanetApplicationEnquiry  ||
