--- a/wiki/PlanningAuthoritiesN.wiki
+++ b/wiki/PlanningAuthoritiesN.wiki
@@ -1,6 +1,6 @@
 ||  || Neath & Port Talbot County Council || Neath || weekly lists as pdf || http://www.neath-porttalbot.gov.uk/planning/dloads.cfm ||
 || Done || New Forest National Park Authority || Lyndhurst || AcolNet || http://web01.newforestnpa.gov.uk/planningpages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
-|| Ready || New Forest District Council || || AcolNet || http://web3.newforest.gov.uk/planningonline/acolnetcgi.gov ||
+|| Done || New Forest District Council || || AcolNet || http://web3.newforest.gov.uk/planningonline/acolnetcgi.gov ||
 || || Newark & Sherwood District Council || Newark || eplanning, searchable by date|| http://www.nsdc.info/eplanning/default.aspx?sid=1&sindex=1&id=5 ||
 || Ready || Newcastle upon Tyne City Council || Newcastle upon Tyne || PublicAccess || ||
 || Ready || Newcastle-under-Lyme Borough Council || Newcastle-under-Lyme || PublicAccess || ||
@@ -23,7 +23,7 @@
 || Done || North Tyneside || Newcastle Upon Tyne || PublicAccess || http://publicaccess.northtyneside.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || North Warwickshire Borough Council || Atherstone || ApplicationSearchServlet|| http://planning.northwarks.gov.uk/portal/servlets/WeeklyListServlet ||
 || Done || North West Leicestershire District Council || Coalville || PublicAccess || http://paccess.nwleics.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
-|| Ready || North Wiltshire District Council || Chippenham || AcolNet || http://planning.northwilts.gov.uk/DCOnline/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
+|| Done || North Wiltshire District Council || Chippenham || AcolNet || http://planning.northwilts.gov.uk/DCOnline/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || || North York Moors National Park Authority || York || weekly lists in html || http://www.moors.uk.net/content.php?nID=55 ||
 || || North Yorkshire County Council || Northallerton || searchable by date || http://212.140.128.182/Online%20Register/PlanAppSrch.asp ||
 || || Northampton Borough Council || Northampton || weekly lists in html - see also WNDC|| http://www.northamptonboroughcouncil.com/planning/defaultNBC.asp ||
