--- a/wiki/PlanningAuthoritiesS.wiki
+++ b/wiki/PlanningAuthoritiesS.wiki
@@ -26,7 +26,7 @@
 || || South Hams District Council || Totnes || searchable by date || http://www.southhams.gov.uk/index/business_index/ksp_development_and_planning/spec-search-planning-apps.htm ||
 || || South Holland District Council || Spalding || pdf list of recent planning applications || http://www.sholland.gov.uk/services/service316.htm ||
 || || South Kesteven District Council || Grantham || site currently down || http://www.southkesteven.gov.uk/Planning/ ||
-|| Ready || South Lakeland District Council || Kendal || FastWeb || http://www.southlakeland.gov.uk/fastweb/search.asp ||
+|| Done || South Lakeland District Council || Kendal || FastWeb || http://www.southlakeland.gov.uk/fastweb/search.asp ||
 || || South Lanarkshire Council || East Kilbride, Hamilton, Lanark, Rutherglen || pdf file of recent apps || http://www.southlanarkshire.gov.uk/portal/page/portal/EXTERNAL_WEBSITE_DEVELOPMENT/SLC_ONLINE_HOME/SLC_ATOZ/PUBLICATION_ATOZ/RELATED_PUBLICATION/?keyword1=currentplanningappsdoc ||
 || || South Norfolk Council || Long Stratton || PlanningExplorer and WAM || http://planning.south-norfolk.gov.uk/MVM/Online/PL/GeneralSearch.aspx, http://wam.south-norfolk.gov.uk/WAM/search/pas/index.htm ||
 || || South Northamptonshire || Towcester || searchable by date || http://snc.planning-register.co.uk/PlanAppSrch.asp ||
