--- a/wiki/PlanningAuthoritiesH.wiki
+++ b/wiki/PlanningAuthoritiesH.wiki
@@ -12,7 +12,7 @@
 || Done || Hartlepool Borough Council || Hartlepool || ApplicationSearchServlet || http://eforms.hartlepool.gov.uk:7777/portal/servlets/ApplicationSearchServlet ||
 ||  || Hastings Borough Council || St Leonards on Sea || Weekly list as html, and UKPlanning || http://www.hastings.gov.uk/planning/SearchResults.aspx ||
 || 
-|| Ready || Havant Borough Council || Havant || AcolNet || http://www3.havant.gov.uk/scripts/planningpages/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch&theme= ||
+|| Done || Havant Borough Council || Havant || AcolNet || http://www3.havant.gov.uk/scripts/planningpages/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch&theme= ||
 ||  || Havering Borough Council || Romford || searchable by date || http://lxop01.havering.gov.uk:7783/portal/page?_pageid=33,30979&_dad=portal&_schema=PORTAL ||
 ||  || Herefordshire Council || Hereford || searchable by date || http://www.herefordshire.gov.uk/gis/planQuery.aspx ||
 ||  || Hertfordshire County Council || Hertford || waste and minerals only, not online || ttp://www.hertsdirect.org/yrccouncil/hcc/env/hdp/ ||
