Edited wiki page through web user interface.

--- a/wiki/PossibleGroups.wiki
+++ b/wiki/PossibleGroups.wiki
@@ -6,7 +6,7 @@ This page contains some groups of planning authorities for which we don't yet ha
 searchparam.asp:
 
   * East Northamptonshire (also has a PublicAccess, which seems to contain more applications)
-  * Harborough
+  * Harborough (also has a PublicAccess, which seems a slightly different set of applications...)
   * Melton
   * Rutland
 
